--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
-    <link href="https://fonts.googleapis.com/css?family=Lato|Aller" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 
@@ -27,6 +27,27 @@
   </head>
 
   <body>
+    <header class="header">
+      <div class="row">
+        <div class="col col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1">
+          <img class="img-responsive" src="images/projecthub-logo.png" />
+        </div>
+        <div class="col col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-1">
+          <h2 class="title">Easy, accesible, team oriented</h2>
+          <p class="subtitle">Manage your Github projects from the palm of your hand. Anytime, anywhere.</p>
+          <img class="store-button" src="images/appstore-button.png" />
+          <img class="store-button" src="images/googleplay-button.png" />
+        </div>
+      </div>
+    </header>
+
+    <div class="row">
+      <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1">
+        <h1 class="title">How does it work?</h1>
+        <h3 class="section-header">1- Select a repository from your GitHub Account</h3>
+        <p class="subtext">We automatically collect information about your project's language, stars and forks.</p>
+      </div>
+    </div>
   </body>
 
 <html>
