header and body adjustments

--- a/index.html
+++ b/index.html
@@ -41,11 +41,32 @@
       </div>
     </header>
 
-    <div class="row">
-      <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1">
+    <div class="row how-to-section">
+      <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
         <h1 class="title">How does it work?</h1>
         <h3 class="section-header">1- Select a repository from your GitHub Account</h3>
-        <p class="subtext">We automatically collect information about your project's language, stars and forks.</p>
+        <p class="subtext">Just log into Github and we'll manage it from there. We automatically collect information about your project's language, stars and forks.</p>
+      </div>
+      <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-md-4 col-md-offset-0 text-center">
+        <img class="how-to-image" src="images/how-does-it-work-1.png" />
+      </div>
+    </div>
+    <div class="row how-to-section grey">
+      <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
+        <h3 class="section-header">2- Import your project.</h3>
+        <p class="subtext">Select which project you'd like to import to your device.</p>
+      </div>
+      <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-md-4 col-md-offset-0 text-center">
+        <img class="how-to-image" src="images/how-does-it-work-2.png" />
+      </div>
+    </div>
+    <div class="row how-to-section">
+      <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
+        <h3 class="section-header">3- Start playing</h3>
+        <p class="subtext">On the bus, on the train, even in the toilet.</p>
+      </div>
+      <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-md-4 col-md-offset-0 text-center">
+        <img class="how-to-image" src="images/how-does-it-work-3.png" />
       </div>
     </div>
   </body>
