footer nearly ready

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <header class="header">
       <div class="row">
         <div class="col col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1">
-          <img class="img-responsive" src="images/projecthub-logo.png" />
+          <img class="img-responsive" src="images/projecthub-logo.png" draggable="false" />
         </div>
         <div class="col col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-1">
           <h2 class="title">Easy, accesible, team oriented</h2>
           <p class="subtitle">Manage your Github projects from the palm of your hand. Anytime, anywhere.</p>
-          <img class="store-button" src="images/appstore-button.png" />
-          <img class="store-button" src="images/googleplay-button.png" />
+          <img class="store-button" src="images/appstore-button.png" draggable="false" />
+          <img class="store-button" src="images/googleplay-button.png" draggable="false" />
         </div>
       </div>
     </header>
@@ -48,7 +48,7 @@
         <p class="subtext">Just log into Github and we'll manage it from there. We automatically collect information about your project's language, stars and forks.</p>
       </div>
       <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-md-4 col-md-offset-0 text-center">
-        <img class="how-to-image" src="images/how-does-it-work-1.png" />
+        <img class="how-to-image" src="images/how-does-it-work-1.png" draggable="false" />
       </div>
     </div>
     <div class="row how-to-section grey">
@@ -57,7 +57,7 @@
         <p class="subtext">Select which project you'd like to import to your device.</p>
       </div>
       <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-md-4 col-md-offset-0 text-center">
-        <img class="how-to-image" src="images/how-does-it-work-2.png" />
+        <img class="how-to-image" src="images/how-does-it-work-2.png" draggable="false" />
       </div>
     </div>
     <div class="row how-to-section">
@@ -66,9 +66,35 @@
         <p class="subtext">On the bus, on the train, even in the toilet.</p>
       </div>
       <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-md-4 col-md-offset-0 text-center">
-        <img class="how-to-image" src="images/how-does-it-work-3.png" />
+        <img class="how-to-image" src="images/how-does-it-work-3.png" draggable="false" />
       </div>
     </div>
+
+    <footer class="footer">
+      <div class="row text-center">
+        <h2 class="title">Better organization for a more productive you</h2>
+      </div>
+      <div class="row footer-logo-container">
+        <div class="col col-md-3 col-md-offset-1">
+          <img class="img-responsive" src="images/projecthub-footer-logo.png" draggable="false" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col col-xs-12 col-md-3 col-md-offset-1">
+          <a class="links" href="#">Terms and Conditions</a>
+          <br>
+          <a class="links" href="#">FAQ</a>
+        </div>
+        <div class="col col-xs-12 col-md-4 text-center">
+          <a class="links" href="xmartlabs.com">About Xmartlabs</a>
+          <br>
+          <a class="links" href="https://github.com/xmartlabs">See more projects</a>
+        </div>
+        <div class="col col-xs-12 col-md-3 text-center">
+          <p class="links transparent" href="xmartlabs.com">Follow Us</p>
+        </div>
+      </div>
+    </footer>
   </body>
 
 <html>
