--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header class="header">
       <div class="row">
         <div class="col col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1">
-          <img class="img-responsive" src="images/projecthub-logo.png" draggable="false" />
+          <img class="img-responsive logo" src="images/projecthub-logo.png" draggable="false" />
         </div>
         <div class="col col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-1">
           <h2 class="title">Easy, accesible, team oriented</h2>
@@ -47,7 +47,7 @@
         <h3 class="section-header">1- Select a repository from your GitHub Account</h3>
         <p class="subtext">Just log into Github and we'll manage it from there. We automatically collect information about your project's language, stars and forks.</p>
       </div>
-      <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-md-4 col-md-offset-0 text-center">
+      <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0 col-md-4 text-center">
         <img class="how-to-image" src="images/how-does-it-work-1.png" draggable="false" />
       </div>
     </div>
@@ -56,7 +56,7 @@
         <h3 class="section-header">2- Import your project.</h3>
         <p class="subtext">Select which project you'd like to import to your device.</p>
       </div>
-      <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-md-4 col-md-offset-0 text-center">
+      <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0 col-md-4 text-center">
         <img class="how-to-image" src="images/how-does-it-work-2.png" draggable="false" />
       </div>
     </div>
@@ -65,7 +65,7 @@
         <h3 class="section-header">3- Start playing</h3>
         <p class="subtext">On the bus, on the train, even in the toilet.</p>
       </div>
-      <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-md-4 col-md-offset-0 text-center">
+      <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0 col-md-4 text-center">
         <img class="how-to-image" src="images/how-does-it-work-3.png" draggable="false" />
       </div>
     </div>
@@ -75,22 +75,22 @@
         <h2 class="title">Better organization for a more productive you</h2>
       </div>
       <div class="row footer-logo-container">
-        <div class="col col-md-3 col-md-offset-1">
-          <img class="img-responsive" src="images/projecthub-footer-logo.png" draggable="false" />
+        <div class="col col-xs-12 col-sm-5 col-md-3 col-md-offset-1 text-center">
+          <img src="images/projecthub-footer-logo.png" draggable="false" />
         </div>
       </div>
       <div class="row">
-        <div class="col col-xs-12 col-md-3 col-md-offset-1">
+        <div class="col col-xs-12 col-sm-4 col-md-3 col-md-offset-1 text-center">
           <a class="links" href="#">Terms and Conditions</a>
           <br>
           <a class="links" href="#">FAQ</a>
         </div>
-        <div class="col col-xs-12 col-md-4 text-center">
+        <div class="col col-xs-12 col-sm-4 col-md-4 text-center">
           <a class="links" href="xmartlabs.com">About Xmartlabs</a>
           <br>
           <a class="links" href="https://github.com/xmartlabs">See more projects</a>
         </div>
-        <div class="col col-xs-12 col-md-3 text-center">
+        <div class="col col-xs-12 col-sm-4 col-md-3 text-center">
           <p class="links transparent" href="xmartlabs.com">Follow Us</p>
         </div>
       </div>
