--- a/index.html
+++ b/index.html
@@ -28,70 +28,81 @@
 
   <body>
     <header class="header">
-      <div class="row">
-        <div class="col col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1">
-          <img class="img-responsive logo" src="images/projecthub-logo.png" draggable="false" />
-        </div>
-        <div class="col col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-1">
-          <h2 class="title">Easy, accesible, team oriented</h2>
-          <p class="subtitle">Manage your Github projects from the palm of your hand. Anytime, anywhere.</p>
-          <img class="store-button" src="images/appstore-button.png" draggable="false" />
-          <img class="store-button" src="images/googleplay-button.png" draggable="false" />
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1">
+            <img class="img-responsive logo" src="images/projecthub-logo.png" draggable="false" />
+          </div>
+          <div class="col col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-1">
+            <h2 class="title">Easy, accesible, team oriented</h2>
+            <p class="subtitle">Manage your Github projects from the palm of your hand. Anytime, anywhere.</p>
+            <img class="store-button" src="images/appstore-button.png" draggable="false" />
+          </div>
         </div>
       </div>
     </header>
 
-    <div class="row how-to-section">
-      <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
-        <h1 class="title">How does it work?</h1>
-        <h3 class="section-header">1- Select a repository from your GitHub Account</h3>
-        <p class="subtext">Just log into Github and we'll manage it from there. We automatically collect information about your project's language, stars and forks.</p>
-      </div>
-      <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0 col-md-4 text-center">
-        <img class="how-to-image" src="images/how-does-it-work-1.png" draggable="false" />
-      </div>
-    </div>
-    <div class="row how-to-section grey">
-      <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
-        <h3 class="section-header">2- Import your project.</h3>
-        <p class="subtext">Select which project you'd like to import to your device.</p>
-      </div>
-      <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0 col-md-4 text-center">
-        <img class="how-to-image" src="images/how-does-it-work-2.png" draggable="false" />
+    <div class="container-fluid">
+      <div class="row how-to-section">
+        <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
+          <h1 class="title">How does it work?</h1>
+          <h3 class="section-header">1- Select a repository from your GitHub Account</h3>
+          <p class="subtext">Just log into Github and we'll manage it from there. Select from your own, your organizations' and your forked repositories.</p>
+        </div>
+        <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0 col-md-4 text-center">
+          <img class="how-to-image" src="images/how-does-it-work-1.png" draggable="false" />
+        </div>
       </div>
     </div>
-    <div class="row how-to-section">
-      <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
-        <h3 class="section-header">3- Start playing</h3>
-        <p class="subtext">On the bus, on the train, even in the toilet.</p>
+    <div class="how-to-section grey">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
+            <h3 class="section-header">2- Import your project.</h3>
+            <p class="subtext">Select which project you'd like to import to your device.</p>
+          </div>
+          <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0 col-md-4 text-center">
+            <img class="how-to-image" src="images/how-does-it-work-2.png" draggable="false" />
+          </div>
+        </div>
       </div>
-      <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0 col-md-4 text-center">
-        <img class="how-to-image" src="images/how-does-it-work-3.png" draggable="false" />
+    </div>
+    <div class="container-fluid">
+      <div class="row how-to-section">
+        <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
+          <h3 class="section-header">3- Start playing</h3>
+          <p class="subtext">On the bus, on the train, even in the toilet.</p>
+        </div>
+        <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0 col-md-4 text-center">
+          <img class="how-to-image" src="images/how-does-it-work-3.png" draggable="false" />
+        </div>
       </div>
     </div>
 
     <footer class="footer">
-      <div class="row text-center">
-        <h2 class="title">Better organization for a more productive you</h2>
-      </div>
-      <div class="row footer-logo-container">
-        <div class="col col-xs-12 col-sm-5 col-md-3 col-md-offset-1 text-center">
-          <img src="images/projecthub-footer-logo.png" draggable="false" />
+      <div class="container-fluid">
+        <div class="row text-center">
+          <h2 class="title">Better organization for a more productive you</h2>
         </div>
-      </div>
-      <div class="row">
-        <div class="col col-xs-12 col-sm-4 col-md-3 col-md-offset-1 text-center">
-          <a class="links" href="#">Terms and Conditions</a>
-          <br>
-          <a class="links" href="#">FAQ</a>
+        <div class="row footer-logo-container">
+          <div class="col col-xs-12 col-sm-5 col-md-3 col-md-offset-1 text-center">
+            <img src="images/projecthub-footer-logo.png" draggable="false" />
+          </div>
         </div>
-        <div class="col col-xs-12 col-sm-4 col-md-4 text-center">
-          <a class="links" href="xmartlabs.com">About Xmartlabs</a>
-          <br>
-          <a class="links" href="https://github.com/xmartlabs">See more projects</a>
-        </div>
-        <div class="col col-xs-12 col-sm-4 col-md-3 text-center">
-          <p class="links transparent" href="xmartlabs.com">Follow Us</p>
+        <div class="row">
+          <div class="col col-xs-12 col-sm-4 col-md-3 col-md-offset-1 text-center">
+            <a class="links" href="#">Terms and Conditions</a>
+            <br>
+            <a class="links" href="#">FAQ</a>
+          </div>
+          <div class="col col-xs-12 col-sm-4 col-md-4 text-center">
+            <a class="links" href="https://xmartlabs.com" target="_blank">About Xmartlabs</a>
+            <br>
+            <a class="links" href="https://github.com/xmartlabs" target="_blank">See more projects</a>
+          </div>
+          <div class="col col-xs-12 col-sm-4 col-md-3 text-center">
+            <p class="links transparent" href="xmartlabs.com">Follow Us</p>
+          </div>
         </div>
       </div>
     </footer>
