removes FAQ and Terms and Conditions links

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
         </div>
         <div class="row">
           <div class="col col-xs-12 col-sm-4 col-md-3 col-md-offset-1 text-center">
-            <a class="links" href="#">Terms and Conditions</a>
+            <!-- <a class="links" href="#">Terms and Conditions</a>
             <br>
-            <a class="links" href="#">FAQ</a>
+            <a class="links" href="#">FAQ</a> -->
           </div>
           <div class="col col-xs-12 col-sm-4 col-md-4 text-center">
             <a class="links" href="https://xmartlabs.com" target="_blank">About Xmartlabs</a>
