--- a/index.html
+++ b/index.html
@@ -90,19 +90,17 @@
           </div>
         </div>
         <div class="row">
-          <div class="col col-xs-12 col-sm-4 col-md-3 col-md-offset-1 text-center">
-            <!-- <a class="links" href="#">Terms and Conditions</a>
-            <br>
-            <a class="links" href="#">FAQ</a> -->
-          </div>
-          <div class="col col-xs-12 col-sm-4 col-md-4 text-center">
+          <div class="col col-xs-12 col-sm-6 text-center">
             <a class="links" href="https://xmartlabs.com" target="_blank">About Xmartlabs</a>
             <br>
             <a class="links" href="https://github.com/xmartlabs" target="_blank">See more projects</a>
           </div>
-          <div class="col col-xs-12 col-sm-4 col-md-3 text-center">
+          <div class="col col-xs-12 col-sm-6 text-center">
             <p class="links transparent" href="xmartlabs.com">Follow Us</p>
           </div>
+        </div>
+        <div class="row text-center">
+          <p class="copyright">Project Hub - Xmartlabs - 2017 all right reserved</p>
         </div>
       </div>
     </footer>
