--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1">
-            <img class="img-responsive logo" src="images/projecthub-logo.png" draggable="false" />
+            <img class="img-responsive logo" src="images/projecthub-logo.png" srcset="images/projecthub-logo@2x.png 2x, images/projecthub-logo@3x.jpg 3x" draggable="false" />
           </div>
           <div class="col col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-1">
             <h2 class="title">Easy, accesible, team oriented</h2>
             <p class="subtitle">Manage your Github projects from the palm of your hand. Anytime, anywhere.</p>
-            <img class="store-button" src="images/appstore-button.png" draggable="false" />
+            <img class="store-button" src="images/appstore-button.png" srcset="images/appstore-button@2x.png 2x, images/appstore-button@3x.jpg 3x" draggable="false" />
           </div>
         </div>
       </div>
@@ -50,7 +50,7 @@
           <p class="subtext">Just log into Github and we'll manage it from there. Select from your own, your organizations' and your forked repositories.</p>
         </div>
         <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0 col-md-4 text-center">
-          <img class="how-to-image" src="images/how-does-it-work-1.png" draggable="false" />
+          <img class="how-to-image" src="images/how-does-it-work-1.png" srcset="images/how-does-it-work-1@2x.png 2x, images/how-does-it-work-1@3x.jpg 3x" draggable="false" />
         </div>
       </div>
     </div>
@@ -59,10 +59,10 @@
         <div class="row">
           <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
             <h3 class="section-header">2- Import your project.</h3>
-            <p class="subtext">Select which project you'd like to import to your device.</p>
+            <p class="subtext">Select which project you'd like to import to your device. You are just one click away from starting to work.</p>
           </div>
           <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0 col-md-4 text-center">
-            <img class="how-to-image" src="images/how-does-it-work-2.png" draggable="false" />
+            <img class="how-to-image" src="images/how-does-it-work-2.png" srcset="images/how-does-it-work-2@2x.png 2x, images/how-does-it-work-2@3x.jpg 3x" draggable="false" />
           </div>
         </div>
       </div>
@@ -71,10 +71,10 @@
       <div class="row how-to-section">
         <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
           <h3 class="section-header">3- Start playing</h3>
-          <p class="subtext">On the bus, on the train, even in the toilet.</p>
+          <p class="subtext">Move and delete cards, check up on issues and pull requests. On the bus, on the train, even in the toilet.</p>
         </div>
         <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0 col-md-4 text-center">
-          <img class="how-to-image" src="images/how-does-it-work-3.png" draggable="false" />
+          <img class="how-to-image" src="images/how-does-it-work-3.png" srcset="images/how-does-it-work-3@2x.png 2x, images/how-does-it-work-3@3x.jpg 3x" draggable="false" />
         </div>
       </div>
     </div>
@@ -86,7 +86,7 @@
         </div>
         <div class="row footer-logo-container">
           <div class="col col-xs-12 col-sm-5 col-md-3 col-md-offset-1 text-center">
-            <img src="images/projecthub-footer-logo.png" draggable="false" />
+            <img src="images/projecthub-footer-logo.png" srcset="images/projecthub-footer-logo@2x.png 2x, images/projecthub-footer-logo@3x.jpg 3x" draggable="false" />
           </div>
         </div>
         <div class="row">
