embelishes toilet text

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="row how-to-section">
         <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
           <h3 class="section-header">3- Start playing</h3>
-          <p class="subtext">Move and delete cards, check up on issues and pull requests. On the bus, on the train, even in the toilet.</p>
+          <p class="subtext">Move and delete cards, check up on issues and pull requests. On the bus, on the train, <b>even in the toilet</b>.</p>
         </div>
         <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0 col-md-4 text-center">
           <img class="how-to-image" src="images/how-does-it-work-3.png" srcset="images/how-does-it-work-3@2x.png 2x, images/how-does-it-work-3@3x.jpg 3x" draggable="false" />
