fixes missing punctuation

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <footer class="footer">
       <div class="container-fluid">
         <div class="row text-center">
-          <h2 class="title">Better organization for a more productive you</h2>
+          <h2 class="title">Better organization for a more productive you.</h2>
         </div>
         <div class="row footer-logo-container">
           <div class="col col-xs-12 col-sm-5 col-md-3 col-md-offset-1 text-center">
