--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1">
-            <img class="img-responsive logo" src="images/projecthub-logo.png" srcset="images/projecthub-logo@2x.png 2x, images/projecthub-logo@3x.jpg 3x" draggable="false" />
+            <img class="img-responsive logo" src="images/projecthub-logo.png" srcset="images/projecthub-logo@2x.png 2x, images/projecthub-logo@3x.png 3x" draggable="false" />
           </div>
           <div class="col col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-1">
             <h2 class="title">Easy, accesible, team oriented</h2>
             <p class="subtitle">Manage your Github projects from the palm of your hand. Anytime, anywhere.</p>
-            <img class="store-button" src="images/appstore-button.png" srcset="images/appstore-button@2x.png 2x, images/appstore-button@3x.jpg 3x" draggable="false" />
+            <img class="store-button" src="images/appstore-button.png" srcset="images/appstore-button@2x.png 2x, images/appstore-button@3x.png 3x" draggable="false" />
           </div>
         </div>
       </div>
@@ -50,7 +50,7 @@
           <p class="subtext">Just log into Github and we'll manage it from there. Select from your own, your organizations' and your forked repositories.</p>
         </div>
         <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0 col-md-4 text-center">
-          <img class="how-to-image" src="images/how-does-it-work-1.png" srcset="images/how-does-it-work-1@2x.png 2x, images/how-does-it-work-1@3x.jpg 3x" draggable="false" />
+          <img class="how-to-image" src="images/how-does-it-work-1.png" srcset="images/how-does-it-work-1@2x.png 2x, images/how-does-it-work-1@3x.png 3x" draggable="false" />
         </div>
       </div>
     </div>
@@ -62,7 +62,7 @@
             <p class="subtext">Select which project you'd like to import to your device. You are just one click away from starting to work.</p>
           </div>
           <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0 col-md-4 text-center">
-            <img class="how-to-image" src="images/how-does-it-work-2.png" srcset="images/how-does-it-work-2@2x.png 2x, images/how-does-it-work-2@3x.jpg 3x" draggable="false" />
+            <img class="how-to-image" src="images/how-does-it-work-2.png" srcset="images/how-does-it-work-2@2x.png 2x, images/how-does-it-work-2@3x.png 3x" draggable="false" />
           </div>
         </div>
       </div>
@@ -74,7 +74,7 @@
           <p class="subtext">Move and delete cards, check up on issues and pull requests. On the bus, on the train, <b>even in the toilet</b>.</p>
         </div>
         <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0 col-md-4 text-center">
-          <img class="how-to-image" src="images/how-does-it-work-3.png" srcset="images/how-does-it-work-3@2x.png 2x, images/how-does-it-work-3@3x.jpg 3x" draggable="false" />
+          <img class="how-to-image" src="images/how-does-it-work-3.png" srcset="images/how-does-it-work-3@2x.png 2x, images/how-does-it-work-3@3x.png 3x" draggable="false" />
         </div>
       </div>
     </div>
@@ -86,17 +86,19 @@
         </div>
         <div class="row footer-logo-container">
           <div class="col col-xs-12 col-sm-5 col-md-3 col-md-offset-1 text-center">
-            <img src="images/projecthub-footer-logo.png" srcset="images/projecthub-footer-logo@2x.png 2x, images/projecthub-footer-logo@3x.jpg 3x" draggable="false" />
+            <img src="images/projecthub-footer-logo.png" srcset="images/projecthub-footer-logo@2x.png 2x, images/projecthub-footer-logo@3x.png 3x" draggable="false" />
           </div>
         </div>
         <div class="row">
-          <div class="col col-xs-12 col-sm-6 text-center">
+          <div class="col col-xs-12 col-sm-6 text-center link-container">
             <a class="links" href="https://xmartlabs.com" target="_blank">About Xmartlabs</a>
             <br>
             <a class="links" href="https://github.com/xmartlabs" target="_blank">See more projects</a>
           </div>
           <div class="col col-xs-12 col-sm-6 text-center">
-            <p class="links transparent" href="xmartlabs.com">Follow Us</p>
+            <a href="https://xmartlabs.com" target="_blank">
+              <img src="images/xmartlabs-logo-white.png" srcset="images/xmartlabs-logo-white@2x.png 2x, images/xmartlabs-logo-white@3x.png 3x" draggable="false" />
+            </a>
           </div>
         </div>
         <div class="row text-center">
