moves how it works title to its own section

--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
 
     <div class="container-fluid">
       <div class="row how-to-section">
-        <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
+        <div class="col-xs-11 col-xs-offset-1 col-sm-11 col-sm-offset-1 col-md-10 col-md-offset-2">
           <h1 class="title">How does it work?</h1>
+        </div>
+        <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
           <h3 class="section-header">1- Select a repository from your GitHub Account</h3>
           <p class="subtext">Just log into Github and we'll manage it from there. Select from your own, your organizations' and your forked repositories.</p>
         </div>
