--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <div class="container-fluid">
       <div class="row how-to-section">
-        <div class="col-xs-11 col-xs-offset-1 col-sm-11 col-sm-offset-1 col-md-10 col-md-offset-2">
+        <div class="col-xs-12 text-center">
           <h1 class="title">How does it work?</h1>
         </div>
         <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
