centers footer projecthub logo

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <h2 class="title">Better organization for a more productive you.</h2>
         </div>
         <div class="row footer-logo-container">
-          <div class="col col-xs-12 col-sm-5 col-md-3 col-md-offset-1 text-center">
+          <div class="col col-xs-12 text-center">
             <img src="images/projecthub-footer-logo.png" srcset="images/projecthub-footer-logo@2x.png 2x, images/projecthub-footer-logo@3x.png 3x" draggable="false" />
           </div>
         </div>
