adds links to both about and t&c pages

--- a/index.html
+++ b/index.html
@@ -98,12 +98,17 @@
           </div>
         </div>
         <div class="row">
-          <div class="col col-xs-12 col-sm-6 text-center link-container">
+          <div class="col col-xs-12 col-sm-4 col-md-3 col-md-offset-1 text-center link-container">
             <a class="links" href="https://xmartlabs.com" target="_blank">About Xmartlabs</a>
             <br>
             <a class="links" href="https://github.com/xmartlabs" target="_blank">See more projects</a>
           </div>
-          <div class="col col-xs-12 col-sm-6 text-center">
+          <div class="col col-sm-4 col-md-4 text-center link-container">
+            <a class="links" href="about.html">About Projecthub</a>
+            <br>
+            <a class="links" href="terms-and-conditions.html">Terms and Conditions</a>
+          </div>
+          <div class="col col-xs-12 col-sm-4 col-md-3 text-center">
             <a href="https://xmartlabs.com" target="_blank">
               <img src="images/xmartlabs-logo-white.png" srcset="images/xmartlabs-logo-white@2x.png 2x, images/xmartlabs-logo-white@3x.png 3x" draggable="false" />
             </a>
