adds footer copyright notice of github

--- a/about.html
+++ b/about.html
@@ -80,6 +80,7 @@
         </div>
         <div class="row text-center">
           <p class="copyright">Project Hub - Xmartlabs - 2017 all right reserved</p>
+          <p class="copyright">Project Hub is not a representative of GitHub. GitHub and the GitHub logos are Trademarks of GitHub inc.</p>
         </div>
       </div>
     </footer>
