add links to apple store and to home page

--- a/index.html
+++ b/index.html
@@ -31,12 +31,16 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1">
+          <a href="/">
             <img class="img-responsive logo" src="images/projecthub-logo.png" srcset="images/projecthub-logo@2x.png 2x, images/projecthub-logo@3x.png 3x" draggable="false" />
+          </a>
           </div>
           <div class="col col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-1">
             <h2 class="title">Easy, accesible, team oriented</h2>
             <p class="subtitle">Manage your Github projects from the palm of your hand. Anytime, anywhere.</p>
-            <img class="store-button" src="images/appstore-button.png" srcset="images/appstore-button@2x.png 2x, images/appstore-button@3x.png 3x" draggable="false" />
+            <a href="http://itunes.apple.com/us/app/projecthub/id1245190471" target="_blank">
+              <img class="store-button" src="images/appstore-button.png" srcset="images/appstore-button@2x.png 2x, images/appstore-button@3x.png 3x" draggable="false" />
+            </a>
           </div>
         </div>
       </div>
