--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
           <h1 class="title">How does it work?</h1>
         </div>
         <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
-          <div class="section-text">
-            <h3 class="section-header">1- Select a repository from your GitHub Account</h3>
-            <p class="subtext">Just log into Github and we'll manage it from there. Select from your own, your organizations' and your forked repositories.</p>
+          <div class="text-wrapper">
+            <div class="section-text">
+              <h3 class="section-header">1- Select a repository from your GitHub Account</h3>
+              <p class="subtext">Just log into Github and we'll manage it from there. Select from your own, your organizations' and your forked repositories.</p>
+            </div>
           </div>
         </div>
         <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0 col-md-4 text-center">
@@ -65,14 +67,16 @@
     <div class="how-to-section grey">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
-            <div class="section-text">
-              <h3 class="section-header">2- Import your project.</h3>
-              <p class="subtext">Select which project you'd like to import to your device. You are just one click away from starting to work.</p>
-            </div>
-          </div>
-          <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0 col-md-4 text-center">
+          <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2 text-center">
             <img class="how-to-image" src="images/how-does-it-work-2.png" srcset="images/how-does-it-work-2@2x.png 2x, images/how-does-it-work-2@3x.png 3x" draggable="false" />
+          </div>
+          <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0 col-md-4">
+            <div class="text-wrapper">
+              <div class="section-text">
+                <h3 class="section-header">2- Import your project.</h3>
+                <p class="subtext">Select which project you'd like to import to your device. You are just one click away from starting to work.</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -80,9 +84,11 @@
     <div class="container-fluid">
       <div class="row how-to-section">
         <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
-          <div class="section-text">
-            <h3 class="section-header">3- Start playing</h3>
-            <p class="subtext">Move and delete cards, check up on issues and pull requests. On the bus, on the train, <b>even in the toilet</b>.</p>
+          <div class="text-wrapper">
+            <div class="section-text">
+              <h3 class="section-header">3- Start playing</h3>
+              <p class="subtext">Move and delete cards, check up on issues and pull requests. On the bus, on the train, <b>even in the toilet</b>.</p>
+            </div>
           </div>
         </div>
         <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0 col-md-4 text-center">
