--- a/index.html
+++ b/index.html
@@ -104,17 +104,14 @@
         </div>
         <div class="row footer-logo-container">
           <div class="col col-xs-12 text-center">
-            <img src="images/projecthub-footer-logo.png" srcset="images/projecthub-footer-logo@2x.png 2x, images/projecthub-footer-logo@3x.png 3x" draggable="false" />
           </div>
         </div>
         <div class="row">
           <div class="col col-xs-12 col-sm-4 col-md-3 col-md-offset-1 text-center link-container">
-            <a class="links" href="https://xmartlabs.com" target="_blank">About Xmartlabs</a>
-            <br>
-            <a class="links" href="https://github.com/xmartlabs" target="_blank">See more projects</a>
+            <img src="images/projecthub-footer-logo.png" srcset="images/projecthub-footer-logo@2x.png 2x, images/projecthub-footer-logo@3x.png 3x" draggable="false" />
           </div>
           <div class="col col-sm-4 col-md-4 text-center link-container">
-            <a class="links" href="about.html">About Projecthub</a>
+            <a class="links" href="about.html">About</a>
             <br>
             <a class="links" href="terms-and-conditions.html">Terms and Conditions</a>
           </div>
@@ -125,7 +122,7 @@
           </div>
         </div>
         <div class="row text-center">
-          <p class="copyright">Project Hub - Xmartlabs - 2017 all right reserved</p>
+          <p class="copyright">2017 all rights reserved</p>
           <p class="copyright">Project Hub is not a representative of GitHub. GitHub and the GitHub logos are Trademarks of GitHub inc.</p>
         </div>
       </div>
