--- a/index.html
+++ b/index.html
@@ -103,22 +103,20 @@
           <h2 class="title">Better organization for a more productive you.</h2>
         </div>
         <div class="row footer-logo-container">
-          <div class="col col-xs-12 text-center">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col col-xs-12 col-sm-4 col-md-3 col-md-offset-1 text-center link-container">
+          <div class="col col-xs-12 col-sm-5 col-sm-offset-1 col-md-3 col-md-offset-3 text-center">
             <img src="images/projecthub-footer-logo.png" srcset="images/projecthub-footer-logo@2x.png 2x, images/projecthub-footer-logo@3x.png 3x" draggable="false" />
           </div>
-          <div class="col col-sm-4 col-md-4 text-center link-container">
-            <a class="links" href="about.html">About</a>
-            <br>
-            <a class="links" href="terms-and-conditions.html">Terms and Conditions</a>
-          </div>
-          <div class="col col-xs-12 col-sm-4 col-md-3 text-center">
+          <div class="col col-xs-12 col-sm-5 col-md-3 text-center">
             <a href="https://xmartlabs.com" target="_blank">
               <img src="images/xmartlabs-logo-white.png" srcset="images/xmartlabs-logo-white@2x.png 2x, images/xmartlabs-logo-white@3x.png 3x" draggable="false" />
             </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col col-xs-12 text-center link-container">
+            <a class="links" href="about.html">About</a>
+            <br>
+            <a class="links" href="terms-and-conditions.html">Terms and Conditions</a>
           </div>
         </div>
         <div class="row text-center">
