--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
             </a>
           </div>
           <div class="col col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-1">
-            <h2 class="title">Easy, accesible, team oriented</h2>
+            <h2 class="title">Easy, accessible, team oriented</h2>
             <p class="subtitle">Manage your Github projects from the palm of your hand. Anytime, anywhere.</p>
             <a href="http://itunes.apple.com/us/app/projecthub/id1245190471" target="_blank">
               <img class="store-button" src="images/appstore-button.png" srcset="images/appstore-button@2x.png 2x, images/appstore-button@3x.png 3x" draggable="false" />
